default/objects/Site__c/fields/DELCO__c.field-meta.xml
<CustomField>
    <fullName>DELCO__c</fullName>
    <label>DELCO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>