default/objects/Site__c/fields/Site_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Identification_Number__c</fullName>
    <label>Site Identification Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>