default/objects/Site__c/fields/Site_Owner_Number_formula__c.field-meta.xml
<CustomField>
    <fullName>Site_Owner_Number_formula__c</fullName>
    <formula>Merchant__r.Site_Owner_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Owner Number</label>
    <type>Text</type>
</CustomField>