default/objects/Site__c/fields/SiteID__c.field-meta.xml
<CustomField>
    <fullName>SiteID__c</fullName>
    <externalId>true</externalId>
    <label>SiteID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>