default/objects/Site__c/validationRules/Mandatory_Merchant.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Merchant</fullName>
    <active>true</active>
    <description>STCP1-1013</description>
    <errorConditionFormula>AND (

OR ($Profile.Name = &quot;Retention Agent&quot;, $Profile.Name = &quot;Retention Manager&quot;,$Profile.Name = &quot;Service Agent&quot;, $Profile.Name = &quot;Service Manager&quot;,$Profile.Name = &quot;CCS Service Agent&quot;, $Profile.Name = &quot;CCS Service Manager&quot;),
ISBLANK ( Merchant__c )

)</errorConditionFormula>
    <errorMessage>Please fill a Merchant</errorMessage>
</ValidationRule>